--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             /* さらに右へ */
             top: 80%;
             /* 画面中央に固定 */
-            transform: translateY(-50%) translateX(20px);
+            transform: translateY(-50%) translateX(12px);
             /* 中央配置と右ずらし */
             background: #505050;
             display: flex;
@@ -897,7 +897,6 @@
         <input type="tel" id="phone" placeholder="電話番号を入力してください" oninput="saveInput('phone')">
 
         <div class="label" id="course">メニューをお選びください<span class="required">必須</span></div>
-        <div class="info-text">※メニューを選択すると<br>空き状況のカレンダーが表示されます</div>
         <div class="menu-sections">
             <button type="button" onclick="showMenu('male')">エステメニュー</button>
             <button type="button" onclick="showMenu('female')">【ネイル】ハンドメニュー</button>
@@ -1125,23 +1124,23 @@
             const name = document.getElementById('name').value;
             // メニューが選択されていたら、各メニューを改行して表示
             const selectedSymptomText = selectedSymptom.length > 0
-                ? `<span style="color:black;"><strong>【メニュー】</strong></span><br>${selectedSymptom.join('<br>')}`
+                ? `<span style="color:black;"><strong>【メニュー】</strong></span><br>・${selectedSymptom.join('<br>')}`
                 : '・メニューが未選択です';
 
             // オプションが選択されていたら、各オプションを改行して表示
             const irradiationsText = irradiationsCount
-                ? `<span style="color:black;"><strong>【オプション】</strong></span><br>${irradiationsCount.split(', ').join('<br>')}`
+                ? `<span style="color:black;"><strong>【オプション】</strong></span><br>・${irradiationsCount.split(', ').join('<br>')}`
                 : '・オプション無し';
             // 第1希望日が選択された場合の表示
             const selectedDate1 = document.getElementById('date1').value;
             const selectedDate1Text = selectedDate1
-                ? `・<span style="color:black;"><strong>第1希望日</strong></span>：${formatDateTime(selectedDate1)}`
+                ? `<span style="color:black;"><strong>【第1希望日】</strong></span><br>${formatDateTime(selectedDate1)}`
                 : '・第1希望日が未選択です';
 
             // 第2希望日が選択された場合の表示
             const selectedDate2 = document.getElementById('date2').value;
             const selectedDate2Text = selectedDate2
-                ? `・<span style="color:black;"><strong>第2希望日</strong></span>：${formatDateTime(selectedDate2)}`
+                ? `<span style="color:black;"><strong>【第2希望日】</strong></span><br>${formatDateTime(selectedDate2)}`
                 : '・第2希望日が未選択です';
 
             // displayInfo要素に情報を表示
@@ -1481,7 +1480,7 @@ function submitForm() {
 
   // メッセージ（任意）
   if (formData.message) {
-    text += `\n\n〈メッセージ〉\n・${formData.message}`;
+    text += `\n〈メッセージ〉\n・${formData.message}`;
   }
 
   // 送信
