--- a/index.html
+++ b/index.html
@@ -2025,22 +2025,22 @@ function formatDateTime(dateTimeString) {
         <hr>
         <div class="info-row">
             <p>${selectedSymptomText}</p>
-            <button class="edit-button" onclick="scrollToElement('beautifuleyebrows'); scrollToElement('shinyskin'); scrollToElement('Cosmetologyasawhole');">修正</button>
+            <button class="edit-button" onclick="scrollToElement('menuLabel'); scrollToElement('shinyskin'); scrollToElement('Cosmetologyasawhole');">修正</button>
         </div>
         <hr>
         <div class="info-row">
             <p>${selectedDate1Text}</p>
-            <button class="edit-button" onclick="scrollToElement('placeholder1')">修正</button>
+            <button class="edit-button" onclick="scrollToElement('placeholder1'); scrollToElement('kibounitizi1')">修正</button>
         </div>
         <hr>
         <div class="info-row">
             <p>${selectedDate2Text}</p>
-            <button class="edit-button" onclick="scrollToElement('placeholder2')">修正</button>
+            <button class="edit-button" onclick="scrollToElement('placeholder2'); scrollToElement('kibounitizi1')">修正</button>
         </div>
         <hr>
         <div class="info-row">
             <p>${selectedDate3Text}</p>
-            <button class="edit-button" onclick="scrollToElement('placeholder3')">修正</button>
+            <button class="edit-button" onclick="scrollToElement('placeholder3'); scrollToElement('kibounitizi1')">修正</button>
         </div>
         <hr>
     `;
