--- a/index.html
+++ b/index.html
@@ -288,6 +288,24 @@
   width: 100%;
   box-sizing: border-box;
 }
+
+        /* 必須マークのスタイル */
+        .required {
+            color: #ffffff;
+            /* ゴールド（黄色） */
+            font-weight: lighter;
+            /* 文字を細くする */
+            font-size: 0.6em;
+            margin-left: 5px;
+            vertical-align: 0.8em;
+            /* 位置を少し上に調整 */
+
+            /* 白色背景の四角形 */
+            background-color: rgb(255, 15, 15);
+            padding: 0 5px;
+            border-radius: 3px;
+            margin-right: 5px;
+        }
     </style>
 </head>
 
@@ -313,7 +331,7 @@
   <div class="label" 
        data-ja="ご来店日(例:西暦記載 ○年○月○日)" 
        data-en="Visit Date (e.g., YYYY/MM/DD)">
-    ご来店日(例:西暦記載 ○年○月○日)
+    ご来店日(例:西暦記載 ○年○月○日)<span class="required">必須</span>
   </div>
   <textarea id="message" rows="1" 
             placeholder="入力してください" 
@@ -323,7 +341,7 @@
   <div class="label" 
        data-ja="お名前(漢字フルネーム)" 
        data-en="Full Name">
-    お名前(漢字フルネーム)
+    お名前(漢字フルネーム)<span class="required">必須</span>
   </div>
   <textarea id="message2" rows="1" 
             placeholder="入力してください" 
@@ -333,7 +351,7 @@
   <div class="label" 
        data-ja="お名前(ふりがな)" 
        data-en="">
-    お名前(ふりがな)
+    お名前(ふりがな)<span class="required">必須</span>
   </div>
   <textarea id="message6" rows="1" 
             placeholder="入力してください" 
@@ -343,7 +361,7 @@
   <div class="label" 
        data-ja="生年月日(例:西暦記載 ○年○月○日)" 
        data-en="Date of Birth (e.g., YYYY/MM/DD)">
-    生年月日(例:西暦記載 ○年○月○日)
+    生年月日(例:西暦記載 ○年○月○日)<span class="required">必須</span>
   </div>
   <textarea id="message3" rows="1" 
             placeholder="入力してください" 
@@ -353,7 +371,7 @@
   <div class="label" 
        data-ja="電話番号" 
        data-en="Phone Number">
-    電話番号
+    電話番号<span class="required">必須</span>
   </div>
   <textarea id="message4" rows="1" 
             placeholder="入力してください" 
@@ -364,7 +382,7 @@
 <div class="label" 
      data-ja="お住まい(都道府県/市区町村まで)" 
      data-en="Address (Prefecture/City)">
-  お住まい(都道府県/市区町村まで)
+  お住まい(都道府県/市区町村まで)<span class="required">必須</span>
 </div>
 
 <div class="address-buttons">
@@ -381,7 +399,7 @@
   <button type="button" onclick="selectaddress(this)" data-ja="海外" data-en="Overseas">海外</button>
 </div>
 
-<div class="label" data-ja="お住まいの区" data-en="Ward where you live">お住まいの区</div>
+<div class="label" data-ja="お住まいの区" data-en="Ward where you live">お住まいの区<span class="required">必須</span></div>
 <div class="priority-buttons">
   <button type="button" onclick="selectpriority(this)" data-ja="中区" data-en="Naka Ward">中区</button>
   <button type="button" onclick="selectpriority(this)" data-ja="西区" data-en="Nishi Ward">西区</button>
@@ -404,7 +422,7 @@
   </div>
 </div>
 
-<div class="label" data-ja="勤務先（または通っている区）" data-en="Reason for Visit">勤務先（または通っている区）</div>
+<div class="label" data-ja="勤務先（または通っている区）" data-en="Reason for Visit">勤務先（または通っている区）<span class="required">必須</span></div>
 <div class="demand-buttons">
   <button type="button" id="onedemand" onclick="selectdemand(this)" data-ja="中区（伏見・栄）" data-en="Naka Ward">中区（伏見・栄）</button>
   <button type="button" id="twodemand" onclick="selectdemand(this)" data-ja="中村区（名駅）" data-en="Nakamura Ward">中村区（名駅）</button>
@@ -412,7 +430,7 @@
   <button type="button" id="fourdemand" onclick="selectdemand(this)" data-ja="勤務先なし（専業主婦・学生など）" data-en="No workplace">勤務先なし（専業主婦・学生など）</button>
 </div>
 
-<div class="label" data-ja="来店しやすい時間帯" data-en="Convenient time to visit">来店しやすい時間帯</div>
+<div class="label" data-ja="来店しやすい時間帯" data-en="Convenient time to visit">来店しやすい時間帯<span class="required">必須</span></div>
 <div class="timezone-buttons">
   <button type="button" id="onetimezone" onclick="selecttimezone(this)" data-ja="午前" data-en="morning">午前</button>
   <button type="button" id="twotimezone" onclick="selecttimezone(this)" data-ja="午後" data-en="afternoon">午後</button>
@@ -420,7 +438,7 @@
   <button type="button" id="fourtimezone" onclick="selecttimezone(this)" data-ja="土日祝" data-en="Saturdays, Sundays, and holidays">土日祝</button>
 </div>
 
-<div class="label" data-ja="来店動機" data-en="Reason for Visit">来店動機</div>
+<div class="label" data-ja="来店動機" data-en="Reason for Visit">来店動機<span class="required">必須</span></div>
 <div class="douki-buttons">
   <button type="button" id="onedouki" onclick="selectdouki(this)" data-ja="HP（来店動機）" data-en="Website">HP（来店動機）</button>
   <button type="button" id="onedouki" onclick="selectdouki(this)" data-ja="滞在中のホテルで予約してもらった" data-en="I made a reservation at the hotel">滞在中のホテルで予約してもらった</button>
@@ -437,7 +455,7 @@
 </div>
 <textarea id="message7" rows="1" placeholder="入力してください" data-ja-placeholder="入力してください" data-en-placeholder="Please enter"></textarea>
 
-<div class="label" data-ja="過去施術" data-en="Previous Treatments">過去施術<br>(過去にサロンで受けたことがある施術)</div>
+<div class="label" data-ja="過去施術" data-en="Previous Treatments">過去施術<br>(過去にサロンで受けたことがある施術)<span class="required">必須</span></div>
 <div class="Introduction-buttons">
   <button type="button" id="oneIntroduction" onclick="selectIntroduction(this)" data-ja="ネイルサロンに初めて来た(過去施術)" data-en="First Time at a Nail Salon">ネイルサロンに初めて来た(過去施術)</button>
   <button type="button" id="twoIntroduction" onclick="selectIntroduction(this)" data-ja="ケア(過去施術)" data-en="Care">ケア(過去施術)</button>
@@ -447,13 +465,13 @@
   <button type="button" id="sevenIntroduction" onclick="selectIntroduction(this)" data-ja="その他(過去施術)" data-en="Other">その他(過去施術)</button>
 </div>
 
-<div class="label" data-ja="空き状況の配信を希望されますか？" data-en="Would you like to be notified of availability?">空き状況の配信を希望されますか？</div>
+<div class="label" data-ja="空き状況の配信を希望されますか？" data-en="Would you like to be notified of availability?">空き状況の配信を希望されますか？<span class="required">必須</span></div>
 <div class="chance-buttons">
   <button type="button" id="fivechance" onclick="selectchance(this)" data-ja="はい" data-en="yes">はい</button>
   <button type="button" id="onechance" onclick="selectchance(this)" data-ja="いいえ" data-en="no">いいえ</button>
 </div>
 
-<div class="label" data-ja="薬品/ネイルでのアレルギー" data-en="Allergies to Products/Nails">薬品/ネイルでのアレルギー</div>
+<div class="label" data-ja="薬品/ネイルでのアレルギー" data-en="Allergies to Products/Nails">薬品/ネイルでのアレルギー<span class="required">必須</span></div>
 <div class="delivery-buttons">
   <button type="button" id="onedelivery" onclick="selectdelivery(this)" data-ja="薬品アレルギー有り" data-en="Yes (has allergies)">薬品アレルギー有り</button>
   <button type="button" id="twodelivery" onclick="selectdelivery(this)" data-ja="薬品アレルギー無し" data-en="No (no allergies)">薬品アレルギー無し</button>
@@ -461,14 +479,14 @@
 
 <div class="label" data-ja="現在補強または長さ出ししている箇所がある方は、<br>左右それぞれの本数をご記入ください。<br>(分かる範囲で結構です)" 
      data-en="If you have reinforcement or extensions, please note the number on each side (as far as you know).">
-  現在補強または長さ出ししている箇所がある方は、<br>左右それぞれの本数をご記入ください。<br>(分かる範囲で結構です)
+  現在補強または長さ出ししている箇所がある方は、<br>左右それぞれの本数をご記入ください。<br>(分かる範囲で結構です)<span class="required">必須</span>
 </div>
 <textarea id="message8" rows="1" placeholder="入力してください" data-ja-placeholder="入力してください" data-en-placeholder="Please enter"></textarea>
 
 <div class="label"
      data-ja="施術後のお写真を、当サロンのSNS<br>（Instagram・ホットペッパーなど）で<br>ご紹介させていただいてもよろしいでしょうか？<br>※お顔や個人が特定される情報は載せません。<br>ご協力は任意です。"
      data-en="May we share your post-treatment photos on our salon's SNS (Instagram, Hot Pepper, etc.)? *Your face and identifiable information will not be shared. Cooperation is voluntary.">
-  施術後のお写真を、当サロンのSNS<br>（Instagram・ホットペッパーなど）で<br>ご紹介させていただいてもよろしいでしょうか？<br>※お顔や個人が特定される情報は載せません。<br>ご協力は任意です。
+  施術後のお写真を、当サロンのSNS<br>（Instagram・ホットペッパーなど）で<br>ご紹介させていただいてもよろしいでしょうか？<br>※お顔や個人が特定される情報は載せません。<br>ご協力は任意です。<span class="required">必須</span>
 </div>
 <div class="snsphoto-buttons">
   <button type="button" id="onesnsphoto" onclick="selectsnsphoto(this)" data-ja="はい" data-en="Yes">はい</button>
@@ -479,7 +497,7 @@
 <div class="label" 
      data-ja="重要項目の同意" 
      data-en="Agreement to Important Items">
-  重要項目の同意
+  重要項目の同意<span class="required">必須</span>
 </div>
 
 <div class="info-text"
@@ -723,7 +741,7 @@ function selectsnsphoto(element) {
             }
 
             // フォームデータのチェック
-            if (!formData.message5) {
+            if (!formData.addressCount) {
                 alert('お住まいを入力してください。');
                 return;
             }
