--- a/index.html
+++ b/index.html
@@ -3589,7 +3589,7 @@ function submitForm() {
     // LINEトークにメッセージを送信
     liff.sendMessages([{
         type: 'text',
-        text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nコース契約の有無：${formData.contractCount}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\n\n【希望日時】\n《第一希望日》\n${formatDate(formData.dates[0])}\n\n《第二希望日》\n${formatDate(formData.dates[1])}\n\n《第三希望日》\n${formatDate(formData.dates[2])}\n\nメッセージ：${formData.message}`
+        text: `【予約フォーム】\n《お名前》${formData.name}\n《電話番号》${formData.phone}\n《コース契約の有無》\n⇒${formData.contractCount}\n《ご来店回数》${formData.visitCount}\n《メニュー》\n${formData.selectedSymptom}\n\n《第一希望日》\n${formatDate(formData.dates[0])}\n\n《第二希望日》\n${formatDate(formData.dates[1])}\n\n《第三希望日》\n${formatDate(formData.dates[2])}\n\n《メッセージ》${formData.message}`
     }]).then(() => {
         alert('ご予約ありがとうございます。確認次第、ご連絡差し上げます。');
         liff.closeWindow();
