--- a/index.html
+++ b/index.html
@@ -2011,7 +2011,7 @@ function formatDateTime(dateTimeString) {
             const contractCountText = contractCount ? `・<span style="color:#ab83e6;"><strong>契約の有無</strong></span>：${contractCount}` : '・契約していない';
             // メニューが選択されていたら、各メニューを改行して表示
             const selectedSymptomText = selectedSymptom.length > 0
-                ? `<span style="color:#ab83e6;"><strong>【メニュー】</strong></span><br>・${selectedSymptom.join('<br>')}`
+                ? `<span style="color:#ab83e6;"><strong>【メニュー】<span class="required">必ずご確認ください</span></strong></span><br>・${selectedSymptom.join('<br>')}`
                 : '・メニューが未選択です';
 
             // オプションが選択されていたら、各オプションを改行して表示
