--- a/index.html
+++ b/index.html
@@ -183,7 +183,6 @@
             box-sizing: border-box;
         }
 
-        .Motivation-buttons,
         .visit-buttons,
         .symptoms,
         .menu-sections,
@@ -194,7 +193,6 @@
             margin-bottom: 20px;
         }
 
-        .Motivation-buttons button,
         .visit-buttons button,
         .symptoms button,
         .menu-sections button,
@@ -210,7 +208,6 @@
             white-space: nowrap;
         }
 
-        .Motivation-buttons button.active,
         .visit-buttons button.active,
         .symptoms button.active,
         .menu-sections button.active,
@@ -718,7 +715,7 @@
     </div>
 
     <div class="container">
-        <h1>Maivi<br>よもぎ、ピーチスノウ<br>予約フォーム
+        <h1>Maivi<br>マッサージコース、フェイシャル<br>予約フォーム
         </h1>
         <div class="label">お客様名<span class="required">必須</span></div>
         <input type="text" id="name" placeholder="お名前を入力してください" oninput="saveInput('name')">
@@ -744,8 +741,9 @@
         <div class="label" id="course">メニューをお選びください<span class="required">必須</span></div>
         <div class="info-text">※メニューを選択すると空き状況のカレンダーが表示されます</div>
         <div class="menu-sections">
-            <button type="button" onclick="showMenu('male')">よもぎ蒸し</button>
-            <button type="button" onclick="showMenu('piiti')">ピーチスノウ(個性診断)</button>
+            <button type="button" onclick="showMenu('female')">フェイシャル</button>
+            <button type="button" onclick="showMenu('whitening')">マッサージコース</button>
+            <button type="button" onclick="showMenu('daietto')">ダイエット</button>
         </div>
 
 <!-- メニュー表示エリア（選択されたメニュー名がここに出る） -->
@@ -753,40 +751,53 @@
 
         <div id="treatment-text" style="display: none; margin-bottom: 10px;"></div>
 
-        <div id="male" class="menu-section">
+        <div id="female" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">◆よもぎ蒸し◆</span>
+                <span class="highlight-text">◆フェイシャル◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">よもぎ蒸し(60分)</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">ハリ弾力アップコース(初回90分)</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="15000">ハリ弾力アップコース(2回目以降60分)</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="15000">ハリ弾力アップコース(美顔器あり初回100分)</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="15000">ハリ弾力アップコース(美顔器あり2回目以降70分)</button>
             </div>
             <div class="highlight-background">
                 <span class="highlight-text">オプション</span>
             </div>
             <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">ピーチスノウ（個性診断/30分）</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">ピーチスノウ（リーディング/60分）</button>
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">フェイスマスク(20分)</button>
             </div>
         </div>
 
-        <div id="piiti" class="menu-section">
+        <div id="whitening" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">◆ピーチスノウ(個性診断)◆</span>
+                <span class="highlight-text">◆リンパドレナージュ◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">個性診断(30分)</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">個性診断＋リーディング(初回60分)</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">リーディング(2回以降60分)</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">全身リンパドレナージュ(初回90分)</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">全身リンパドレナージュ(2回目以降60分)</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">フェイシャルリンパドレナージュ(初回90分)</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">フェイシャルリンパドレナージュ(2回目以降60分)</button>
             </div>
             <div class="highlight-background">
                 <span class="highlight-text">オプション</span>
             </div>
             <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">相性診断(20分)</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">リズムカラー診断(20分)</button>
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">フェイスマスク(20分)</button>
+                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">個性診断(30分)</button>
             </div>
         </div>
 
+        <div id="daietto" class="menu-section">
+            <div class="highlight-background">
+                <span class="highlight-text">◆ダイエット◆</span>
+            </div>
+            <div class="symptoms">
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">よもぎ蒸し＋リンパドレナージュ<br>(初回120分)</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">よもぎ蒸し＋リンパドレナージュ<br>(2回目以降100分)</button>
+            </div>
+        </div>
+        
         <div class="label">希望日時<span class="required">必須</span></div>
         <div class="calendar-container">
             <!-- 月を独立して配置 -->
@@ -885,8 +896,10 @@
         };
 
         let selectedirradiationsTime = 0; // 訪問回数で選択された時間
-
+        
         let menuTimes = {
+            'よもぎ蒸し＋リンパドレナージュ(初回120分)': 150,
+            'よもぎ蒸し＋リンパドレナージュ(2回目以降100分)': 130,
             'よもぎ蒸し(60分)': 90,
             'ハリ弾力アップコース(初回90分)': 120,
             'ハリ弾力アップコース(2回目以降60分)': 90,
@@ -1315,7 +1328,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォームA】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nご来店回数：${formData.MotivationCount}\nコース：${formData.selectedMenu}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【予約フォームB】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\n来店動機：${formData.MotivationCount}\nコース：${formData.selectedMenu}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。');
@@ -1347,7 +1360,7 @@
                 return;
             }
 
-            const url = 'https://script.google.com/macros/s/AKfycbxqfXxEWwbjVtBb3QijrEgvZHBJaUU63z2-haMyQbcVfl7IdfJxpqFzl_kaA4CZGvtx/exec' +
+            const url = 'https://script.google.com/macros/s/AKfycbx9UG3q_2Hej-aSdagaUOzgPFmzPdpAzNruT5sYfdL1lTbtGKtgCEpM4ExgAT3TChwc/exec' +
                 `?startTime=${startTime.toISOString()}&endTime=${endTime.toISOString()}`;
 
             try {
